--- a/client/views/loginpage.html
+++ b/client/views/loginpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
+	<title> Hooli Login</title>
 	<link rel="stylesheet" href="loginpage.css">
 </div> 
 </head>
